--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div id="search-result"></div>
       </div>
     </div>
-    <script src="./logic.js"></script>
+    <script src="./dom.service.js"></script>
+    <script src="./github.service.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
