--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </div>
     <script src="./dom.service.js"></script>
     <script src="./github.service.js"></script>
-    <script src="./index.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
